--- a/package.json
+++ b/package.json
@@ -27,7 +27,11 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1",
+    "safe-json-stringify": "^1.2.0",
     "typescript": "4.9.4",
     "zustand": "^4.3.2"
+  },
+  "devDependencies": {
+    "@types/safe-json-stringify": "^1.1.2"
   }
 }
